# pisugar-power-manager-rs

./: .gitignore  .travis.yml  CHANGELOG  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  config.json  cross-build.sh
.cargo/: config  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-cross.yml  build-gnu.yml  build-musl.yml  build-other.yml  build-web.yml  build.yml  build.yml.bak  build2.yml  daily-build.yml  download-musl-cc.yml  fast-build.yml  main.yml  master.yml  nightly-build.yml  nightly.yml  pisugar-3.yml  pr-build.yml  pr.yml  pre-release.yml  release-qiniu.yml  release.yml  rust-clippy.yml
doc/: build.md  config.md  cross-rs.md  http-api.md  pisugar3.md  setup-linux-cross.sh  systemctl.md
electron/: .babelrc  .gitignore  README.md  package-lock.json  package.json
electron/.electron-vue/: webpack.renderer.config.js  webpack.web.config.js
electron/src/: index.ejs
electron/src/main/: index.js
electron/src/renderer/: App.vue  main.js
electron/src/renderer/components/: MainWindow.vue  socket.js
electron/src/renderer/locale/: en-US.js  index.js  ru-RU.js  zh-CN.js
electron/src/renderer/router/: index.js
electron/src/renderer/utils/: index.js
pisugar-core/: Cargo.toml
pisugar-core/src/: battery.rs  config.rs  ip5209.rs  ip5312.rs  lib.rs  main.rs  model.rs  pisugar3.rs  rtc.rs  sd3078.rs
pisugar-module/: Makefile  README.md  pisugar_3_battery.c  rtc-sd3078.c
pisugar-module/pisugar-2/: .clang-format  Makefile  README.md  pisugar_2_battery.c
pisugar-module/pisugar-3/: Makefile  README.md  pisugar_3_battery.c
pisugar-poweroff/: Cargo.toml
pisugar-poweroff/.rpm/: pisugar-poweroff.default  pisugar-poweroff.service  pisugar-poweroff.spec
pisugar-poweroff/debian/: config  pisugar-poweroff.default  postinst  postrm  prerm  templates
pisugar-poweroff/src/: main.rs
pisugar-programmer/: Cargo.toml
pisugar-programmer/.rpm/: pisugar-programmer.spec
pisugar-programmer/src/: main.rs
pisugar-server/: Cargo.toml
pisugar-server/.rpm/: config.json  pisugar-server.default  pisugar-server.spec
pisugar-server/asserts/: pisugar-server.default  pisugar-server.service  postinst  postrm  preinst  prerm
pisugar-server/debian/: _ws.json  config  config.json  pisugar-server.default  pisugar-server.service  postinst  postrm  preinst  prerm  templates
pisugar-server/src/: cmds.rs  http.rs  jwt.rs  main.rs  stream.rs  tcp.rs  uds.rs  ws.rs
pisugar-webui/: README.md  index.html  package.json
pisugar-webui/src/: App.vue  main.js
pisugar-webui/src/components/: MainWindow.vue  socket.js
pisugar-webui/src/locale/: de-DE.js  en-US.js  es-ES.js  fr-FR.js  index.js  it-IT.js  ja-JP.js  ko-KR.js  nl-NL.js  ru-RU.js  zh-CN.js  zh-TW.js
pisugar-webui/src/utils/: index.js
scripts/: .gitignore  BootWatchdogPiSugar3.sh  PKGBUILD  PiSugar3_DelayedShutdown.sh  PiSugarSButtonActive.sh  Pisugar-power-manager.sh  SoftwareWatchdogPiSugar3.sh  build-aur.sh  i2c_RTC_add_change.sh  install.sh  pisugar-power-manager.sh  pisugar_battery_curve.py  power-on-off.sh  readme.md  record-level.sh  update-version.sh
scripts/aur/: PKGBUILD  build-aur.sh  install.sh  pisugar-bin.install
