[package]
name = "pisugar-core"
version = "1.5.2"
authors = ["PiSugare"]
edition = "2018"
license = "gplv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
rppal = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = {version ="0.14", features = ["client"]}
