[package]
name = "pisugar-core"
version = "2.0.0"
authors = ["PiSugare"]
edition = "2018"
license = "gplv3"
homepage = "https://github.com/PiSugar/pisugar-power-manager-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
rppal = "0.13"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = {version ="0.14.10", features = ["full"]}
anyhow = "1"
rsntp = "4.0.0"
clap = "4.5.23"
