[package]
name = "pisugar-poweroff"
version = "2.3.0"
authors = ["PiSugar"]
edition = "2018"
description = "PiSugar Poweroff"
license = "GPLv3"
homepage = "https://github.com/PiSugar/pisugar-power-manager-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
pisugar-core = { path = "../pisugar-core" }
log = "0.4"
env_logger = "0.9"
anyhow = "1"


[[bin]]
name = "pisugar-poweroff"

[package.metadata.deb]
license-file = ["../LICENSE", "0"]
copyright = "2020, PiSugar team"
extended-description = """\
PiSugar poweroff."""
depends = "$auto, systemd"
section = "utility"
priority = "optional"
maintainer-scripts = "debian"
assets = [
  [
    "target/release/pisugar-poweroff",
    "usr/bin/",
    "755",
  ], # special
  [
    "debian/pisugar-poweroff.default",
    "etc/default/pisugar-poweroff",
    "644",
  ],
  [
    "debian/pisugar-poweroff.service",
    "lib/systemd/system/",
    "644",
  ],
]
conf-files = ["/etc/default/pisugar-poweroff"]

[package.metadata.rpm]
package = "pisugar-poweroff"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
pisugar-poweroff = { path = "/usr/bin/pisugar-poweroff" }

[package.metadata.rpm.files]
"pisugar-poweroff.service" = { path = "/lib/systemd/system/pisugar-poweroff.service" }
"pisugar-poweroff.default" = { path = "/etc/default/pisugar-poweroff" }

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/pisugar-poweroff", dest = "/usr/bin/pisugar-poweroff", mode = "755" },
  { source = ".rpm/pisugar-poweroff.service", dest = "/lib/systemd/system/pisugar-poweroff.service" },
  { source = ".rpm/pisugar-poweroff.default", dest = "/etc/default/pisugar-poweroff" },
]
post_install_script = "systemctl daemon-reload"
post_uninstall_script = "systemctl daemon-reload"
