[package]
name = "pisugar-programmer"
version = "1.6.6"
authors = ["PiSugar"]
edition = "2018"
description = "PiSugar Firmware Programmer (for PiSugar 3)"
license = "GPLv3"
homepage = "https://github.com/PiSugar/pisugar-power-manager-rs"

[dependencies]
rppal = "0.12"
clap = "2"
sysinfo = "0.20.4"

[[bin]]
name = "pisugar-programmer"

[package.metadata.deb]
license-file = ["../LICENSE", "0"]
copyright = "2020, PiSugar team"
extended-description = """\
PiSugar 3 firmware programmer."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/pisugar-programmer", "usr/bin/", "755"],                       # special
]

[package.metadata.rpm]
package = "pisugar-programmer"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
pisugar-programmer = { path = "/usr/bin/pisugar-programmer" }
