[package]
name = "pisugar-server"
version = "1.0.0"
authors = ["PiSugar"]
edition = "2018"

[dependencies]
log = "0.4.8"
syslog = "5"
libc = "0.2"
clap = "2"
bytes = "0.5.4"
ctrlc = "3.1.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.2"
tokio-tungstenite = "0.10.1"
futures = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
hyper = "0.13"
hyper-staticfile = "0.5.1"
pisugar-core = { path = "../pisugar-core" }

[[bin]]
name = "pisugar-server"

[package.metadata.deb]
license-file = ["../LICENSE", "0"]
copyright = "2020, PiSugar team"
extended-description = """\
PiSugar power manager server."""
depends = "$auto, systemd"
section = "utility"
priority = "optional"
maintainer-scripts = "pisugar-server/debian"                                    # working dir relatived
assets = [
    ["target/release/pisugar-server", "usr/bin/", "755"],                       # special
    ["debian/pisugar-server.default", "etc/default/pisugar-server", "644"],
    ["debian/pisugar-server.service", "lib/systemd/system/", "644"],
    ["debian/config.json", "etc/pisugar-server/", "644"],
    ["debian/_ws.json", "usr/share/pisugar-server/web/", "644"],
    ["../electron/dist/web/*", "usr/share/pisugar-server/web/", "644"],
    ["../electron/dist/web/fonts/*", "usr/share/pisugar-server/web/fonts", "644"]
]