[package]
name = "pisugar-server"
version = "1.7.8"
authors = ["PiSugar"]
edition = "2018"
description = "PiSugar Power Manager"
license = "GPLv3"
homepage = "https://github.com/PiSugar/pisugar-power-manager-rs"
repository = "https://github.com/PiSugar/pisugar-power-manager-rs"

[dependencies]
anyhow = "1"
log = "0.4.8"
env_logger = "0.9"
syslog = "6"
rand = "0.8"
base64 = "0.13"
libc = "0.2"
clap = "3"
bytes = "1"
ctrlc = "3.1.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.8", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tungstenite = "0.17"
futures = "0.3.5"
futures-util = "0.3.5"
futures-channel = "0.3.5"
hyper = { version = "0.14.10", features = ["client", "server", "tcp"] }
hyper-staticfile = "0.8"
hyper-tungstenite = "0.8"
websocket-codec = "0.5"
digest_auth = "0.3.0"
pisugar-core = { path = "../pisugar-core" }

[[bin]]
name = "pisugar-server"

[package.metadata.deb]
license-file = ["../LICENSE", "0"]
copyright = "2020, PiSugar team"
extended-description = """\
PiSugar power manager server."""
depends = "$auto, systemd"
section = "utility"
priority = "optional"
maintainer-scripts = "debian"
assets = [
  [
    "target/release/pisugar-server",
    "usr/bin/",
    "755",
  ], # special
  [
    "debian/pisugar-server.default",
    "etc/default/pisugar-server",
    "644",
  ],
  [
    "debian/pisugar-server.service",
    "lib/systemd/system/",
    "644",
  ],
  [
    "debian/config.json",
    "etc/pisugar-server/",
    "644",
  ],
  [
    "debian/_ws.json",
    "usr/share/pisugar-server/web/",
    "644",
  ],
  [
    "../electron/dist/web/*",
    "usr/share/pisugar-server/web/",
    "644",
  ],
  [
    "../electron/dist/web/fonts/*",
    "usr/share/pisugar-server/web/fonts",
    "644",
  ],
  [
    "../electron/dist/web/imgs/*",
    "usr/share/pisugar-server/web/imgs",
    "644",
  ],
]
conf-files = ["/etc/default/pisugar-server", "/etc/pisugar-server/config.json"]

[package.metadata.rpm]
package = "pisugar-server"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
pisugar-server = { path = "/usr/bin/pisugar-server" }

[package.metadata.rpm.files]
"pisugar-server.service" = { path = "/lib/systemd/system/pisugar-server.service" }
"pisugar-server.default" = { path = "/etc/default/pisugar-server" }
"config.json" = { path = "/etc/pisugar-server/config.json" }
"_ws.json" = { path = "/usr/share/pisugar-server/web/_ws.json" }
"../../electron/dist/web/" = { path = "/usr/share/pisugar-server/web" }
