[package]
name = "pisugar-server"
version = "2.3.1"
authors = ["PiSugar"]
edition = "2018"
description = "PiSugar Power Manager"
license = "GPLv3"
homepage = "https://github.com/PiSugar/pisugar-power-manager-rs"
repository = "https://github.com/PiSugar/pisugar-power-manager-rs"

[dependencies]
anyhow = "1"
log = "0.4.8"
env_logger = "0.9"
syslog = "6"
rand = "0.9.2"
base64 = "0.22.1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
bytes = "1"
ctrlc = "3.1.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.8", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tungstenite = "0.28.0"
futures = "0.3.5"
futures-util = "0.3.5"
futures-channel = "0.3.5"
hyper = { version = "1.8.1", features = ["client", "server"] }
hyper-staticfile = "0.10.1"
hyper-tungstenite = "0.19.0"
websocket-codec = "0.5"
digest_auth = "0.3.0"
pisugar-core = { path = "../pisugar-core" }
shlex = "1.3.0"
enum-variants-strings = "0.3.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
actix-web = "4.11.0"
actix-ws = "0.3.0"
actix-files = "0.6.8"
actix-cors = "0.7.1"
serde_json = "1.0.145"
ctor = "0.6.1"

[[bin]]
name = "pisugar-server"

[dev-dependencies]
rstest = "0.26.1"

[package.metadata.deb]
license-file = ["../LICENSE", "0"]
copyright = "2020, PiSugar team"
extended-description = """\
PiSugar power manager server."""
depends = "$auto, systemd"
section = "utility"
priority = "optional"
maintainer-scripts = "debian"
assets = [
  [
    "target/release/pisugar-server",
    "usr/bin/",
    "755",
  ], # special
  [
    "debian/pisugar-server.default",
    "etc/default/pisugar-server",
    "644",
  ],
  [
    "debian/pisugar-server.service",
    "lib/systemd/system/",
    "644",
  ],
  [
    "debian/config.json",
    "etc/pisugar-server/",
    "644",
  ],
  [
    "debian/_ws.json",
    "usr/share/pisugar-server/web/",
    "644",
  ],
  [
    "../pisugar-webui/dist/**/*",
    "usr/share/pisugar-server/web/",
    "644",
  ],
]
conf-files = ["/etc/default/pisugar-server", "/etc/pisugar-server/config.json"]

[package.metadata.rpm]
package = "pisugar-server"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
pisugar-server = { path = "/usr/bin/pisugar-server" }

[package.metadata.rpm.files]
"pisugar-server.service" = { path = "/lib/systemd/system/pisugar-server.service" }
"pisugar-server.default" = { path = "/etc/default/pisugar-server" }
"config.json" = { path = "/etc/pisugar-server/config.json" }
"_ws.json" = { path = "/usr/share/pisugar-server/web/_ws.json" }
"../../pisugar-webui/dist/" = { path = "/usr/share/pisugar-server/web" }


[package.metadata.generate-rpm]
assets = [
  { source = "target/release/pisugar-server", dest = "/usr/bin/pisugar-server", mode = "755" },
  { source = ".rpm/pisugar-server.service", dest = "/lib/systemd/system/pisugar-server.service" },
  { source = ".rpm/pisugar-server.default", dest = "/etc/default/pisugar-server" },
  { source = ".rpm/config.json", dest = "/etc/pisugar-server/config.json" },
  { source = ".rpm/_ws.json", dest = "/usr/share/pisugar-server/web/_ws.json" },
  { source = "../pisugar-webui/dist/*", dest = "/usr/share/pisugar-server/web" },
]
post_install_script = "systemctl daemon-reload"
pre_uninstall_script = "systemctl stop pisugar-server.service || true"
post_uninstall_script = "systemctl daemon-reload"
